<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/horizontal_margin"
        android:paddingTop="@dimen/vertical_margin"
        android:paddingRight="@dimen/horizontal_margin"
        android:text="@string/name"
        android:id="@+id/textKota"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingLeft="@dimen/horizontal_margin"
        android:paddingRight="@dimen/horizontal_margin"
        android:text="@string/temperature"
        android:id="@+id/textTemp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingRight="@dimen/horizontal_margin"
        android:paddingLeft="@dimen/horizontal_margin"
        android:paddingBottom="@dimen/vertical_margin"
        android:text="@string/description"
        android:id="@+id/textDesc"/>



</LinearLayout>